Updates dependencies and fixes icon service
Updates Angular and other dependencies to their latest versions.

Fixes the icon service to return a default warning icon when the requested icon is not found, improving application robustness and UX.

Changes the object-fit property of the priest image to "contain",
preventing the image from being cropped and improving its visual appearance.

--- a/client/src/app/components/priests/priests.component.scss
+++ b/client/src/app/components/priests/priests.component.scss
@@ -30,7 +30,7 @@
 #priests .card-wrap .image-wrap img {
 	width: 100%;
 	height: 400px;
-	object-fit: cover;
+	object-fit: contain;
 	object-position: top;
 }
 
